# simplecomputer

./: .gitignore  CMakeLists.txt  Makefile  README.md  pr01.c  test_terminal.sh
console/: main.c
examples/: sum.sa  sum.sb  sum_generated.sa
include/: myBigChars.h  myReadKey.h  mySimpleComputer.h  myTerm.h  sc_types.h  simpleassembler.h  simplebasic.h
myBigChars/: myBigChars.c
myReadKey/: myReadKey.c
mySimpleComputer/: mySimpleComputer.c
myTerm/: myTerm.c
simpleassembler/: main.c  simpleassembler.c
simplebasic/: main.c  simplebasic.c
